# lightning-GPT

./: .gitignore  LICENSE  README.md  config.yaml  environment.yml  main.py  pyproject.toml  requirements.txt
checkpoints/: BLM.ckpt  BigramLanguageModel.ckpt
configs/: blm.yaml  gpt.yaml
layers/: __init__.py  block.py  feed_forward.py  head.py  multi_head.py
modules/: GPT_module.py  __init__.py  bigram_module.py  tiny_shakespeare_datamodule.py
src/lightning_gpt/: __main__.py
src/lightning_gpt/data_modules/: __init__.py  tiny_shakespeare_datamodule.py
src/lightning_gpt/layers/: __init__.py  block.py  feed_forward.py  head.py  multi_head.py
src/lightning_gpt/modules/: __init__.py  bigram.py  gpt.py
utils/: config_parser.py
